--- a/coi-management-web/src/main/webapp/WEB-INF/template/main.xhtml
+++ b/coi-management-web/src/main/webapp/WEB-INF/template/main.xhtml
@@ -3,8 +3,9 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-	<meta charset="UTF-8" />
-	<title>Insert title here</title>
+	<meta charset="UTF-8"/>
+	<title>Centro Ortopédico Ingá</title>
+	<link rel="stylesheet" href="/css/global.css"/>
 	<link rel="stylesheet" href="/themes/base/jquery.ui.all.css"/>
 	<link rel="stylesheet" href="/themes/smoothness/jquery-ui.css"/>
 	<script type="text/javascript" src="/js/jquery-1.9.1.js"></script>
