--- a/coi-management-web/src/main/webapp/WEB-INF/template/main.xhtml
+++ b/coi-management-web/src/main/webapp/WEB-INF/template/main.xhtml
@@ -14,9 +14,9 @@
 	<script type="text/javascript" src="/js/noty/layouts/top.js"></script>
 	<script type="text/javascript" src="/js/noty/layouts/center.js"></script>
 	<script type="text/javascript" src="/js/noty/themes/default.js"></script>
+	<script type="text/javascript" src="/js/underscore.js"></script>
+	<script type="text/javascript" src="/js/backbone.js"></script>
 	<script type="text/javascript" src="/js/main.js"></script>
 </h:head>
-<h:body>
-	<ui:insert />
-</h:body>
+	<ui:insert/>
 </html>
