--- a/coi-management-web/src/main/webapp/css/global.css
+++ b/coi-management-web/src/main/webapp/css/global.css
@@ -1,104 +1,68 @@
 @CHARSET "UTF-8";
 
 body {
-	background: url("/images/stripe.png");
-    font-family: Verdana,Arial,sans-serif;
+	background: url("images/stripe.png");
 }
 
-form {
+input[type=text].ui-button {
+	text-align: left;
+}
+
+.coi-form {
 	width: 750px;
 	margin: 0 auto;
-	background: white;
-	border-radius: 4px;
+	position: relative;
 }
 
-form > header {
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-	background: url("images/ui-bg_glass_75_e6e6e6_1x400.png") repeat-x scroll 50% 50% #E6E6E6;
-	border: 1px solid #D3D3D3;
-    color: #555555;
-    font-weight: normal;
-    font-size: 1.1em;
-    padding: 10px;
+.coi-form > .ui-dialog-titlebar {
+    padding: .7em;
 }
 
-fieldset {
-	border:none;
+.coi-form > .ui-dialog-buttonpane {
+    padding: .3em;
+    text-align: right;
 }
 
-fieldset.form-actions {
+.coi-form-item {
+	margin: 15px;
+}
+
+.coi-form-item > dt {
+	margin-bottom: 6px;
+}
+
+.coi-form-item > dt > label {
+    font-weight: bold;
+}
+
+.coi-form-item > dd {
+	margin: 0;
+}
+
+.coi-form-item input[type=text] {
+	width: 400px;
+}
+
+th.ui-widget-header {
+	padding: .4em;
+}
+
+.coi-row-label {
 	text-align: right;
 }
 
-legend {
-    color: #555555;
-    font-weight: normal;
-    font-size: 1.1em;
+.coi-row-item input[type=text] {
+	width: 200px;
 }
 
-label {
-	font-weight:bold;
-    color: #555555;
-    font-size: 1em;
+.coi-form-item input[type=text].invalid {
+	border: 2px solid red;
 }
 
-label.field {
-	display:block;
+.ui-tooltip.error {
+	color: red;
 }
 
-label.label {
-	text-align:right;
-	width:130px;
-	float:left;
-	height: 23px;
-	padding-top: 2px;
-}
-
-input.textbox {
-	width:300px;
-}
-
-input.valuebox {
-	width:300px;
-	float:right;
-}
-
-fieldset p {
-	clear:both;
-	padding:5px;
-	margin:0;
-}
-
-table {
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-	border: 1px solid #D3D3D3;
-	margin: 10px 0;
-	border-spacing: 0;
-}
-
-table > thead {
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-	background: url("images/ui-bg_glass_75_e6e6e6_1x400.png") repeat-x scroll 50% 50% #E6E6E6;
-	border-bottom: 1px solid #D3D3D3;
-}
-
-table > thead > tr > td {
-	padding: 5px;
-}
-
-table > tbody > tr > td {
-	border: 1px solid #D3D3D3;
-	border-left: none;
-	border-top: none;
-}
-
-table > tbody > tr:last-child > td {
-	border-bottom: none;
-}
-
-table > tbody > tr > td:last-child {
-	border-right: none;
+.no-close .ui-dialog-titlebar-close {
+	display: none;
 }
