--- a/coi-management-web/src/main/webapp/css/global.css
+++ b/coi-management-web/src/main/webapp/css/global.css
@@ -56,7 +56,7 @@ th.ui-widget-header {
 }
 
 .coi-form-item input[type=text].coi-validation-invalid {
-	border: 2px solid red;
+	background: url("images/error-stripe.png") repeat;
 }
 
 .ui-tooltip.coi-tooltip-error {
@@ -65,6 +65,19 @@ th.ui-widget-header {
 
 .no-close .ui-dialog-titlebar-close {
 	display: none;
+}
+
+.coi-input-input {
+	border: medium none;
+    box-shadow: none;
+}
+
+.coi-input {
+    display: inline-block;
+    overflow: hidden;
+    padding: 0;
+    position: relative;
+    vertical-align: middle;
 }
 
 .coi-action-cancel, 
