Formulário de Entradas [close-3626860]

--- a/coi-management-web/src/main/webapp/css/global.css
+++ b/coi-management-web/src/main/webapp/css/global.css
@@ -12,6 +12,7 @@ input[type=text].ui-button {
 	width: 750px;
 	margin: 0 auto;
 	position: relative;
+	overflow: visible;
 }
 
 .coi-form > .ui-dialog-titlebar {
