Importação de pessoas via arquivo [4051786]

--- a/coi-management-web/src/main/webapp/css/global.css
+++ b/coi-management-web/src/main/webapp/css/global.css
@@ -82,6 +82,11 @@ th.ui-widget-header {
     vertical-align: middle;
 }
 
+.coi-paginator {
+	padding: 5px;
+	text-align: right;
+}
+
 .coi-action-cancel, 
 .coi-action-create, 
 .coi-action-update, 
