Relatório de produção [6578123] Alteração do cadastro de entrada para remover o campo valor da entrada e adicionar o campo desconto no produto

--- a/coi-management-web/src/main/webapp/css/global.css
+++ b/coi-management-web/src/main/webapp/css/global.css
@@ -61,6 +61,10 @@ th.ui-widget-header {
 	width: 100px;
 }
 
+input[type=text].coi-short-text {
+	width: 100px;
+}
+
 .coi-form-item input[type=text].coi-validation-invalid {
 	background: url("images/error-stripe.png") repeat;
 }
