--- a/coi-management-web/src/main/resources/pagamentos.jrxml
+++ b/coi-management-web/src/main/resources/pagamentos.jrxml
@@ -20,6 +20,9 @@
 	<field name="agencia" class="java.lang.String"/>
 	<field name="conta" class="java.lang.String"/>
 	<field name="cheque" class="java.lang.String"/>
+	<variable name="total" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{valor}]]></variableExpression>
+	</variable>
 	<group name="categoria">
 		<groupExpression><![CDATA[$F{categoria}]]></groupExpression>
 		<groupHeader>
@@ -127,4 +130,34 @@
 			</textField>
 		</band>
 	</detail>
+	<summary>
+		<band height="20">
+			<staticText>
+				<reportElement x="0" y="0" width="400" height="20" uuid="74f16da5-bf21-49e3-b211-a0f6943a6958"/>
+				<box rightPadding="2">
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.0"/>
+				</box>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font isBold="true" isPdfEmbedded="true"/>
+				</textElement>
+				<text><![CDATA[Total:]]></text>
+			</staticText>
+			<textField pattern="¤ #,##0.00">
+				<reportElement x="400" y="0" width="100" height="20" uuid="0cc1cd26-9ae4-4f82-8e8d-971b1f276b7c"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{total}]]></textFieldExpression>
+			</textField>
+		</band>
+	</summary>
 </jasperReport>
