--- a/coi-management-web/src/main/resources/laudo-pre.jrxml
+++ b/coi-management-web/src/main/resources/laudo-pre.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="laudo" pageWidth="595" pageHeight="850" columnWidth="523" leftMargin="36" rightMargin="36" topMargin="36" bottomMargin="36" uuid="45665aca-12e0-4f2c-9fae-7ca7cac9881d">
 	<property name="ireport.zoom" value="1.6105100000000032"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="192"/>
+	<property name="ireport.y" value="0"/>
 	<subDataset name="observacoesDataSet" uuid="a1b1d00d-5058-4f57-ab0f-85940a55f13d">
 		<field name="codigo" class="java.lang.Integer"/>
 		<field name="descricao" class="java.lang.String"/>
@@ -11,6 +11,12 @@
 		<field name="codigo" class="java.lang.Integer"/>
 		<field name="descricao" class="java.lang.String"/>
 	</subDataset>
+	<parameter name="paciente" class="java.lang.String"/>
+	<parameter name="medico" class="java.lang.String"/>
+	<parameter name="sexo" class="java.lang.String"/>
+	<parameter name="idade" class="java.lang.Integer"/>
+	<parameter name="status" class="java.lang.String"/>
+	<parameter name="data" class="java.util.Date"/>
 	<parameter name="vertebras" class="java.lang.String"/>
 	<parameter name="colunaLombarDensidade" class="java.math.BigDecimal"/>
 	<parameter name="coloFemurDensidade" class="java.math.BigDecimal"/>
@@ -25,10 +31,62 @@
 	<parameter name="comparacoes" class="java.util.Collection"/>
 	<parameter name="corpoInteiroDensidade" class="java.math.BigDecimal"/>
 	<parameter name="corpoInteiroZScore" class="java.math.BigDecimal"/>
+	<pageHeader>
+		<band height="80">
+			<textField>
+				<reportElement x="0" y="0" width="523" height="20" uuid="cc067e86-a8b2-4892-a253-87ebe0e4b646"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Paciente: " + $P{paciente}.toUpperCase()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="20" width="523" height="20" uuid="7ba8a73f-6b49-4fbf-ad85-99bba146a128"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Médico Solicitante: " + $P{medico}.toUpperCase()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="40" width="314" height="20" uuid="dc60febf-adb6-4e0d-bc2e-df34457e67f3"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Sexo: " + $P{sexo}.toUpperCase()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="314" y="40" width="209" height="20" uuid="2bf6ea65-fc87-41ce-bd91-033208c1d621"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Idade: " + $P{idade} + " ANOS"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="60" width="314" height="20" uuid="ebf26f4c-6947-4306-8422-6451c14163d1"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Status Hormonal: " + $P{status}.toUpperCase()]]></textFieldExpression>
+			</textField>
+			<textField pattern="">
+				<reportElement x="314" y="60" width="209" height="20" uuid="710bbaed-74eb-4c08-9f79-4ff51895875c"/>
+				<textElement verticalAlignment="Middle">
+					<font pdfFontName="Helvetica-Bold"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Data: " + new SimpleDateFormat("dd/MM/yyyy").format($P{data})]]></textFieldExpression>
+			</textField>
+		</band>
+	</pageHeader>
 	<detail>
 		<band height="370" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="523" height="40" uuid="24ad4533-626c-4b25-b882-b10d0d2496a7"/>
+				<reportElement x="0" y="5" width="523" height="30" uuid="24ad4533-626c-4b25-b882-b10d0d2496a7"/>
+				<box>
+					<topPen lineWidth="1.0"/>
+					<leftPen lineWidth="1.0"/>
+					<bottomPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
@@ -230,7 +288,7 @@
 				</textElement>
 				<text><![CDATA[CONCLUSÃO: ]]></text>
 			</staticText>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="75" y="270" width="448" height="20" uuid="cfd6e85a-77f5-4f20-b795-3d1722607afc"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{conclusao}]]></textFieldExpression>
@@ -253,6 +311,7 @@
 							<textField isStretchWithOverflow="true">
 								<reportElement x="0" y="0" width="523" height="20" uuid="3150904a-0ef8-405e-9831-be5aeb016d85"/>
 								<box topPadding="2" leftPadding="0" bottomPadding="0"/>
+								<textElement textAlignment="Justified"/>
 								<textFieldExpression><![CDATA["- " + $F{descricao}]]></textFieldExpression>
 							</textField>
 						</jr:listContents>
@@ -277,6 +336,7 @@
 							<textField isStretchWithOverflow="true">
 								<reportElement x="0" y="0" width="523" height="20" uuid="92b90d98-44bd-4695-88e6-99c2a4d9dabb"/>
 								<box topPadding="2" bottomPadding="0"/>
+								<textElement textAlignment="Justified"/>
 								<textFieldExpression><![CDATA["- " + $F{descricao}]]></textFieldExpression>
 							</textField>
 						</jr:listContents>
